...
            padding: EdgeInsetsGeometry.symmetric(horizontal: 10),
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              crossAxisAlignment: CrossAxisAlignment.center,
              children: [
                Text(
                  'Enter OTP Code',
                  textAlign: TextAlign.center,
                  style: TextStyle(
                    color: MyColors.blackColor,
                    fontSize: 20,
                    fontFamily: 'Roboto',
                    fontWeight: FontWeight.w700,
...
                    disabledColor: MyColors.textFieldBorderColor,
                    selectedColor: MyColors.textFieldBorderColor,
                  ),
                ),
                SizedBox(height: 20),
                CustomButton(
                  buttonText: 'Continue',
                  backgroundColor: MyColors.basePrimaryColor,
                  buttonTextColor: MyColors.whiteColor,
                  onTap: () {
                    Navigator.push(
                      (context),
                      MaterialPageRoute(
...
