...
                ),
                SizedBox(height: 20),
                Column(
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    CustomButton(
                      buttonText: 'Continue With Mobile Number',
                      backgroundColor: MyColors.basePrimaryColor,
                      buttonTextColor: MyColors.whiteColor,
                      onTap: () {
                        Navigator.push(
                          (context),
                          MaterialPageRoute(
...
