...
                  },
                ),
                SizedBox(height: 10),
                Align(
                  alignment: Alignment.centerLeft,
                  child: Text(
                    "Contact Details",
                    style: TextStyle(
                      color: MyColors.textHeadingColor,
                      fontFamily: 'Roboto',
                      fontWeight: FontWeight.bold,
                      fontSize: 14,
                    ),
...
                              contentPadding: EdgeInsets.zero,
                              dense: true,
                              selected: true,
                            ),
                            RadioListTile<String>(
                              title: Text(
                                'Booking for Dependant/ Others',
                                style: TextStyle(
                                  color: MyColors.blackColor,
                                  fontFamily: 'Roboto',
                                  fontWeight: FontWeight.w400,
                                  fontSize: 14,
                                ),
...
