...
      body: Column(
        children: [
          Padding(
            padding: EdgeInsets.symmetric(horizontal: 8, vertical: 5),
            child: SearchWidget(
              keyboardType: TextInputType.text,
              hintText: 'Find service',
              textEditingController: findServicesController,
            ),
          ),
          Expanded(
            child: Consumer<OurServicesProvider>(
              builder: (context, our_services_provider, child) {
...
