...
                          .toList(),
                    ),
                  ],
                ),
                SizedBox(height: 30),
                CustomButton(
                  buttonText: 'Book Appointment',
                  backgroundColor: MyColors.basePrimaryColor,
                  buttonTextColor: MyColors.whiteColor,
                  onTap: () {
                    Navigator.push(
                      (context),
                      MaterialPageRoute(
...
